# fuzzysearch-next

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yaml  images.yaml
fuzzysearch-api/: Cargo.toml  Dockerfile  esbuild.mjs  package.json  sqlx-data.json  tsconfig.json
fuzzysearch-api/assets/js/: selfserve.js
fuzzysearch-api/assets/js/selfserve/: login.ts  selfserve.ts  tokens.ts
fuzzysearch-api/assets/selfserve/js/: errors.ts  htmx.ts  login.ts  selfserve.ts  theme.ts
fuzzysearch-api/queries/: apply_rate_limit.sql  check_handle_twitter.sql  latest_dump.sql  lookup_api_key.sql  lookup_furaffinity_filename.sql  lookup_furaffinity_id.sql  lookup_hashes.sql
fuzzysearch-api/queries/selfserve/: count_user_api_keys.sql  delete_api_key.sql  insert_account.sql  insert_api_key.sql  insert_credential.sql  lookup_credential_by_id.sql  lookup_credentials_for_user.sql  lookup_user_api_keys.sql  lookup_user_by_credential.sql  lookup_username.sql  lookup_username_by_id.sql  update_account_completed.sql
fuzzysearch-api/queries/session/: cleanup_store.sql  clear_store.sql  destroy_session.sql  load_session.sql  store_session.sql
fuzzysearch-api/src/: api.rs  db.rs  main.rs  selfserve.rs
fuzzysearch-api/templates/: _base.html
fuzzysearch-api/templates/selfserve/: _base.html  _footer.html  _navbar.html  alert.html  api_keys.html  auth_form.html  error.html  index.html
fuzzysearch-common/: Cargo.toml
fuzzysearch-common/src/: lib.rs
fuzzysearch-dump/: Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-dump/queries/: delete_dump.sql  estimate_rows.sql  export_e621.sql  export_furaffinity.sql  export_submission.sql  export_weasyl.sql  insert_dump.sql  old_dumps.sql
fuzzysearch-dump/src/: main.rs
fuzzysearch-file-index/: Cargo.toml  sqlx-data.json
fuzzysearch-file-index/migrations/: 20220823021344_initial_schema.down.sql  20220823021344_initial_schema.up.sql  20220823142420_fixes_and_known_sites.down.sql  20220823142420_fixes_and_known_sites.up.sql  20220823151229_add_posted_at_date.down.sql  20220823151229_add_posted_at_date.up.sql  20220823153712_file_detail_view.down.sql  20220823153712_file_detail_view.up.sql  20220916032801_file_metadata_version.down.sql  20220916032801_file_metadata_version.up.sql  20220916034601_file_exif_entries.down.sql  20220916034601_file_exif_entries.up.sql  20230122033621_download_history.down.sql  20230122033621_download_history.up.sql  20230815215644_calculate_hash.down.sql  20230815215644_calculate_hash.up.sql
fuzzysearch-file-index/queries/: create_assocations_from_downloads.sql  existing_hashes.sql  file_dimensions.sql  file_dimensions_site.sql  has_attempted_download.sql  insert_download_history.sql  insert_dump.sql  insert_hash.sql  mark_download_unsuccessful.sql
fuzzysearch-file-index/src/: main.rs
fuzzysearch-loader/: Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-loader/queries/: artist_insert.sql  furaffinity_ids.sql  media_frame_insert.sql  media_insert.sql  media_lookup_sha256.sql  media_lookup_sha256_full.sql  submission_associate_artists.sql  submission_insert.sql  submission_lookup_id.sql  submission_lookup_perceptual_gradient.sql  submission_media_insert.sql
fuzzysearch-loader/src/: main.rs  requests.rs
fuzzysearch-loader/src/sites/: e621.rs  furaffinity.rs  mod.rs  twitter.rs  weasyl.rs
fuzzysearch-web/: Cargo.toml  index.html
fuzzysearch-web/assets/scss/: main.scss
fuzzysearch-web/src/: lib.rs  umami.rs
fuzzysearch-web/src/components/: file_uploader.rs  mod.rs  search_results.rs
fuzzysearch-web/src/workers/: mod.rs
migrations/: 20230819004937_submissions.down.sql  20230819004937_submissions.up.sql  20230819005557_ignored_media.down.sql  20230819005557_ignored_media.up.sql  20230819005928_api.down.sql  20230819005928_api.up.sql  20230819010300_views.down.sql  20230819010300_views.up.sql
