[package]
name = "fuzzysearch-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[features]
"api-types" = ["utoipa"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
utoipa = { version = "3.4.0", optional = true }
uuid = "1.4.1"
