[package]
name = "fuzzysearch-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[features]
"api-types" = ["utoipa"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
utoipa = { version = "4.2.0", optional = true }
