[package]
name = "fuzzysearch-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[features]
"api-types" = ["utoipa"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = { version = "3.2.0", features = ["hex"] }
utoipa = { version = "4.2.0", optional = true }
uuid = { version = "1.4.1", features = ["serde"] }
