[package]
name = "fuzzysearch-dump"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
dotenvy = "0.15.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
clap = { version = "3.2.20", features = ["derive", "env"] }
tokio = { version = "1", features = ["fs", "macros"] }
tokio-stream = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "offline", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv-async = { version = "1", features = ["tokio", "with_serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"
indicatif = "0.17"
