[package]
name = "fuzzysearch-dump"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[dependencies]
dotenvy = "0.15.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
clap = { version = "4.1.3", features = ["derive", "env"] }
tokio = { version = "1.21.1", features = ["fs", "macros"] }
tokio-stream = "0.1.9"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "offline", "chrono"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
csv-async = { version = "1.2.4", features = ["tokio", "with_serde"] }
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
chrono = { version = "0.4.22", features = ["serde"] }
base64 = "0.21.0"
indicatif = "0.17.1"
rust-s3 = { version = "0.32.3", default-features = false, features = ["tokio-rustls-tls"] }
