[package]
name = "fuzzysearch-dump"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[dependencies]
async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.1.3", features = ["derive", "env"] }
csv-async = { version = "1.2.4", features = ["tokio", "with_serde"] }
dotenvy = "0.15.3"
indicatif = { version = "0.17.6", features = ["futures"] }
object_store = { version = "0.7.0", features = ["aws"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_with = { version = "3.2.0", features = ["base64"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "offline", "chrono", "uuid"] }
tokio = { version = "1.21.1", features = ["fs", "macros"] }
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

fuzzysearch-common = { path = "../fuzzysearch-common" }
