[package]
name = "fuzzysearch-file-index"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.17", features = ["env", "derive"] }
csv = "1.1.6"
eyre = "0.6.8"
futures = "0.3.23"
futures-batch = "0.6"
hex = "0.4.3"
image = "0.24.3"
infer = "0.9"
serde = { version = "1.0.144", features = ["derive"] }
sha2 = "0.10.2"
sqlx = { version = "0.6.1", features = ["offline", "runtime-tokio-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1.20.1", features = ["macros", "sync", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.9", features = ["time"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
walkdir = "2.3.2"
