[package]
name = "fuzzysearch-file-index"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.1.1", features = ["env", "derive"] }
csv = "1.1.6"
eyre = "0.6.8"
foxlib = { git = "https://github.com/Syfaro/foxlib.git", features = ["hash"] }
futures = "0.3.23"
futures-batch = "0.6"
hex = "0.4.3"
infer = "0.15.0"
kamadak-exif = "0.5.4"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process", "push"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.2"
sqlx = { version = "0.6.1", features = ["offline", "runtime-tokio-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1.20.1", features = ["macros", "sync", "rt-multi-thread", "fs", "io-std"] }
tokio-stream = { version = "0.1.9", features = ["time"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
walkdir = "2.3.2"
