[package]
name = "fuzzysearch-loader"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[dependencies]
async-nats = { version = "0.34.0", features = ["service"] }
async-trait = "0.1.64"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive", "env"] }
dotenvy = "0.15.6"
eyre = "0.6.8"
ffmpeg-next = "6.1.0"
foxlib = { git = "https://github.com/Syfaro/foxlib.git", features = ["hash"] }
futures = "0.3.26"
hex = "0.4.3"
infer = "0.15.0"
lazy_static = "1.4.0"
object_store = { version = "0.9.1", features = ["aws"] }
opentelemetry = "0.22.0"
opentelemetry_sdk = "0.22.1"
prometheus = { version = "0.13.3", features = ["process"] }
regex = "1.7.1"
scraper = "0.19.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_plain = "1.0.1"
sha2 = "0.10.6"
tap = "1.0.1"
tempfile = "3.5.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "signal"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

fuzzysearch-common = { path = "../fuzzysearch-common" }

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["rustls-tls", "json", "deflate", "gzip", "brotli"]

[dependencies.sqlx]
version = "0.6.2"
features = [
    "chrono",
    "json",
    "macros",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]
