[package]
name = "fuzzysearch-web"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
console_error_panic_hook = "0.1.7"
dotenvy_macro = "0.15.1"
gloo = "0.8.0"
hex = "0.4.3"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png", "webp"] }
img_hash = "3.2.0"
js-sys = "0.3.59"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["DataTransfer", "DataTransferItemList", "DataTransferItem", "ClipboardEvent"] }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr", "hydration"] }
yew-agent = { git = "https://github.com/yewstack/yew.git" }

fuzzysearch-common = { path = "../fuzzysearch-common" }
